src/components/MainContainer/MainContainer.module.css
.mainContainer {
    height: 100vh;
    width: 100vw;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background: url('../../images/backgorund_city2.jpg') no-repeat center center fixed;
    background-size: cover;
    position: relative;
}
.title {
    color: #FFFFFF;
    text-shadow: 3px 5px 2px #474747;
    font-size: 50px;
    margin-bottom: 40px;
}
.map_container {
    max-width: 70vw;
    display: flex;
}
.map_container_title {
    color: #FFFFFF;
    text-shadow: 3px 5px 2px #474747;
    margin-bottom: 20px;
}
.map {
    margin-left: 30px;
    width: 500px;
    height: 500px;
}
.input {
    padding: 10px;
    font-size: 20px;
    border: none;
    width: 100%;
    border-radius: 15px;
    border-bottom: 1px solid aliceblue;
    margin-bottom: 10px;
    transition: all 1s ease;
}
.input:focus {
    background: linear-gradient(to left, aliceblue 0%, white, honeydew);
}

.places {
	list-style: none;
	padding: 0;
}

.places_title {
    max-width: 250px;
    overflow: hidden;
    margin: 0 10px;
    font-size: 20px;
}

.places_button {
    width: 30px;
    height: 30px;    
    background: url('../../images/close_icon.png') no-repeat center center;
    border: none;
    border-radius: 5px;
    transition: all 0.5s ease;
}

.places_button:hover {
    transform: scale(1.2);
    cursor: pointer;
}

.places_item + .places_item {
	margin-top: 10px;
}

.places_item {
    cursor: pointer;
	display: flex;
	align-items: center;
    justify-content: space-between;
	gap: 5px;
    margin: 5px;
	background: aliceblue;
	padding: 5px;
	border-radius: 5px;
	width: 270px;
	box-shadow: 3px 3px 6px rgb(0 0 0 / 0.1);
}

.places_item::before {
	content: url("../../images/map-icon.png");
    max-height: 50px;
}
.places_item:nth-child(even) {
	flex-direction: row-reverse;
	background: honeydew;
	margin-left: 15px;
}
.places_item:nth-child(even)::before {
	transform: rotateY(180deg);
}
.modal {
    position: absolute;
    top: 50%;
    left: 50%;
    font-size: 30px;
    padding: 20px 15px;
    border-radius: 15px;
    background: linear-gradient(to left, aliceblue 0%, white, honeydew);
    max-height: 20vh;
    max-width: 40vw;
    transform: translate(-50%, -50%);
}

